--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "nextcash",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:categories": "npx tsx ./data/seed/seedCategories.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
@@ -42,6 +44,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5"
   }
