added transactions and filter to transactions page

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "numeral": "^2.0.6",
     "pg": "^8.13.3",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/pg": "^8.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
